# analyze-paypal

./: .gitignore  LICENSE  README.md  example.env  main.py  pyproject.toml
analyze_paypal/: analyze_mails.py  configuration.py  exceptions.py  mails_container.py
